--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "sbencoding",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^11.5.1"
+    "discord.js": "^11.5.1",
+    "node-opus": "^0.3.2"
   }
 }
